tests/NormalTests/paczka2/big_fuzzy/39146273.err
Error in line 1: i6fGvbLE A810 48,0
Error in line 8: XC40 S105 54,2
Error in line 26: A590 A590 80,6
Error in line 42: A590 A810 50,3
Error in line 43: A590 S808 72,8
Error in line 44: i6fGvbLE S105 15,1
Error in line 71: yj0OV S808 7,4
Error in line 73: yj0OV A590 96,2
Error in line 78: qqvO5KSSXc9 S808 99,1
Error in line 75: LVZV7uZxVtL A810 0,5
Error in line 83: LVZV7uZxVtL S808 56,4
Error in line 94: XC40 A810 44,1
Error in line 95: XC40 A590 22,0
Error in line 97: i6fGvbLE S808 69,9
Error in line 122: i6fGvbLE S105 32,86
Error in line 120: i6fGvbLE S105 83,6
Error in line 139: i6fGvbLE A810 87,4
Error in line 136: XC40 A810 13,4
Error in line 96: SxtWrF52 S105 30,5
Error in line 147: LVZV7uZxVtL S105 68,3
Error in line 161: i6fGvbLE S105 90,8
Error in line 167: i6fGvbLE A590 177
Error in line 146: yj0OV A810 38,8
Error in line 168: SxtWrF52 S808 46,6
Error in line 162: XC40 S105 23,6
Error in line 159: A590 A810 5,2
Error in line 177: A590 S105 34,3
Error in line 187: SxtWrF52 A590 56,7
Error in line 184: A590 A590 23,8
Error in line 164: i6fGvbLE A590 21,9
Error in line 198: LVZV7uZxVtL A810 98,2
Error in line 202: LVZV7uZxVtL A590 3,4
Error in line 200: SxtWrF52 A810 28,7
Error in line 214: A590 A810 2,7
Error in line 217: yj0OV S808 177,8
Error in line 215: A590 S808 86,1
Error in line 227: LVZV7uZxVtL A590 67,28
Error in line 229: i6fGvbLE S,05 79,,
Error in line 232: i6fGvbLE A590 76,5
Error in line 234: A590 A810 19,9
Error in line 233: i6fGvbLE S105 67,0
Error in line 231: XC40 S808 50,2
Error in line 224: LVZV7uZxVtL S105 86,1
Error in line 249: yj0OV S105 20,0
